@@ -300,6 +300,7 @@ SET(wesnoth-main_SRC
     unit_animation.cpp
     unit_display.cpp
     unit_frame.cpp
+	unit_id.cpp
     unit_map.cpp
     unit_types.cpp
     upload_log.cpp
